sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:11: error: not found: value i
    i=0
    ^AlgCombSort:13: error: not found: value i
    while (i+gap < getValueCount()) {
           ^AlgCombSort:14: error: not found: value i
      if (isSmaller(i, i+gap)) {
                    ^AlgCombSort:14: error: not found: value i
      if (isSmaller(i, i+gap)) {
                       ^AlgCombSort:15: error: not found: value i
        swap(i, i+gap);
             ^AlgCombSort:15: error: not found: value i
        swap(i, i+gap);
                ^AlgCombSort:18: error: not found: value i
      i+=1
      ^